# pong-sdl3-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.claude/skills/agent-response-style/: SKILL.md
.claude/skills/development-workflow/: SKILL.md
.claude/skills/format/: SKILL.md
.claude/skills/repo-conventions/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: build.yml
docs/: ISSUES.md  ROADMAP.md
scripts/: build.cmd  build.ps1  build.sh  test.cmd  test.ps1  test.sh
src/: Application.cpp  Application.h  Clock.h  ClockFake.cpp  ClockFake.h  ClockSdlTicks.cpp  ClockSdlTicks.h  FakeClock.cpp  FakeClock.h  FrameTiming.cpp  FrameTiming.h  Playfield.h  PlayfieldLayout.cpp  PlayfieldLayout.h  PlayfieldRenderer.cpp  PlayfieldRenderer.h  RandomSource.h  RandomSourceMt19937.cpp  RandomSourceMt19937.h  SdlTicksClock.cpp  SdlTicksClock.h  TextRenderer.cpp  TextRenderer.h  main.cpp
tests/: ApplicationTest.cpp  CMakeLists.txt  FrameTimingTest.cpp  PlayfieldLayoutTest.cpp  PlayfieldRendererTest.cpp  RandomSourceTest.cpp  SmokeTest.cpp  TextRendererTest.cpp
